2019-03-27  Gavin Smith  <gavinsmith0123@gmail.com>

	Small changes.

	* tp/Texinfo/XS/xspara.c (xspara_add_text): Add a comment.
	* tp/tests/sectioning/Makefile.am: Do not try to distribute a 
	removed file.
	* tp/Texinfo/XS/po/texinfo.pot: Untrack in git.

2019-03-27  Gavin Smith  <gavinsmith0123@gmail.com>

	Make test results consistent for older versions of perl.

	* tp/Texinfo/Convert/Plaintext.pm (@U): Check argument to @U 
	before attempting to output the character.  The check inside 
	eval doesn't work for old versions of perl.  Trim down some 
	comments.

2019-03-25  Gavin Smith  <gavinsmith0123@gmail.com>

	Make test results consistent between XS and non-XS modules.

	* tp/Texinfo/XS/xspara.c (xspara_add_text): Treat characters 
	with wcwidth 0 the same as those with wcwidth 1.  This is wrong, 
	but gives consistency for the test results.

2019-03-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* util/htmlxref.cnf: Update 'mit-scheme-imail'.  From
	Thérèse Godefroy.

2019-03-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XS/parsetexi/parser.c (wipe_global_info): Set 
	input_encoding_name as well as input_perl_encoding.

2019-03-24  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove INPUT_PERL_ENCODING and INPUT_ENCODING_NAME as 
	customization variables.

	* tp/Texinfo/Common.pm (%default_customization_values)
	(@variable_string_settables): Remove INPUT_PERL_ENCODING and 
	INPUT_ENCODING_NAME.
	* tp/Texinfo/Convert/Converter.pm (converter),
	* tp/Texinfo/XS/parsetexi/Parsetexi.pm (parse_texi_file),
	Remove code propagating INPUT_PERL_ENCODING and 
	INPUT_ENCODING_NAME.

	* tp/Texinfo/ParserNonXS.pm (%initialization_overrides):
	Remove 'INPUT_ENCODING_NAME'.

	* tp/Texinfo/ParserNonXS.pm (_open_in, _end_line, _parse_texi),
	* tp/Texinfo/Convert/Converter.pm (converter),
	* tp/Texinfo/Convert/IXIN.pm (output_ixin),
	* tp/Texinfo/Structuring.pm (do_index_keys):
	Do not use INPUT_PERL_ENCODING or INPUT_ENCODING_NAME: use the 
	'info' hash instead.
